<resources>
    <string name="app_name">iCollect</string>
    <string name="hint_enter_code">Enter Code</string>
    <string name="hint_name">Name</string>
    <string name="hint_number">Number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="please_enter_code">Please enter code or scan</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="search">Search</string>
    <string name="no_records">No Records!</string>
    <string name="hint_select_date">Select Date</string>

    <string name="some_wrong">Something went wrong!, please try again</string>
    <string name="menu_text_print_all_records">Print All Records</string>
    <string name="menu_text_print_current_records">Print Current Records</string>
    <string name="label_total_records">Total Records</string>
    <string name="label_today">Today</string>
    <string name="text_activity">Activity</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="hint_total_record">Total Record</string>
    <string name="text_add_records">Add Records</string>
    <string name="label_users">Users</string>
    <string name="no_users">No Users!</string>
    <string name="write_message">Write Message</string>
</resources>